NetBSD Problem Report #3538

Received: (qmail-queue invoked from smtpd); 25 Apr 1997 21:09:58 -0000
Date: Fri, 25 Apr 97 17:09:25 EDT
From: davide@piper.nectar.cs.cmu.edu
Sender: davide+@piper.nectar.cs.cmu.edu
Reply-To: davide@piper.nectar.cs.cmu.edu
To: gnats-bugs@gnats.netbsd.org
Cc: davide@piper.nectar.cs.cmu.edu
Subject: cat of nonexistent file returns 0 exit status
X-Send-Pr-Version: 3.95

>Number:         3538
>Category:       bin
>Synopsis:       cat of nonexistent file returns 0 exit status
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 25 14:20:02 +0000 1997
>Closed-Date:    Sun Apr 27 18:34:42 +0000 1997
>Last-Modified:  Tue Mar 27 08:20:02 +0000 2012
>Originator:     David Eckhardt
>Release:        1.2
>Organization:
Carnegie Mellon University Computer Science Department
>Environment:
System: NetBSD piper.nectar.cs.cmu.edu 1.1 NetBSD 1.1 (PIPER) #5: Tue Mar 18 17:50:12 EST 1997 davide@piper.nectar.cs.cmu.edu:/usr/davide/cmucs-netbsd/src/sys/arch/i386/compile/PIPER i386

>Description:
	/bin/cat doesn't reflect nonexistent files in its exit status
>How-To-Repeat:
	% cat /some/name/that/does/not/exist
	% echo $status
	0
>Fix:
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed 
State-Changed-By: kleink 
State-Changed-When: Sun Apr 27 11:34:42 PDT 1997 
State-Changed-Why:  
Fixed; thanks for your report! 
From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/3538 CVS commit: src
Date: Tue, 27 Mar 2012 08:16:33 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Tue Mar 27 08:16:33 UTC 2012

 Modified Files:
 	src/distrib/sets/lists/tests: mi
 	src/etc/mtree: NetBSD.dist.tests
 	src/tests/bin: Makefile
 Added Files:
 	src/tests/bin/cat: Makefile d_align.in d_align.out t_cat.sh

 Log Message:
 Add regression tests for the 1990s bugs PR bin/3538 and PR bin/4841.


 To generate a diff of this commit:
 cvs rdiff -u -r1.457 -r1.458 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.69 -r1.70 src/etc/mtree/NetBSD.dist.tests
 cvs rdiff -u -r1.1 -r1.2 src/tests/bin/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/bin/cat/Makefile \
     src/tests/bin/cat/d_align.in src/tests/bin/cat/d_align.out \
     src/tests/bin/cat/t_cat.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.