Indicate file handling failures by exit codes >0; fixes PR/3538 from David Eckhardt <davide@piper.nectar.cs.cmu.edu>.